--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
 		"@cloudflare/workers-types": "^4.20250510.0",
 		"typescript": "^5.5.2",
 		"wrangler": "^4.14.4"
+	},
+	"dependencies": {
+		"@cloudflare/puppeteer": "^1.0.2"
 	}
 }
