--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-	"printWidth": 140,
+	"printWidth": 90,
 	"singleQuote": true,
 	"semi": true,
-	"useTabs": true
+	"useTabs": true,
+	"tabWidth": 4
 }
