still dont know what im doing

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,9 +2,11 @@ name = "droscra"
 main = "src/server/index.ts"
 compatibility_date = "2025-05-07"
 
+[observability]
+enabled = true
+
 [env.staging.vars]
 DEBUG = true
-ORIGIN = ""
 
 [[durable_objects.bindings]]
 class_name = "DroscraObj"
